--- a/essay1.html
+++ b/essay1.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            color: rgb(255, 255, 0);
+            font-size: 60pt;
+        }
+    </style>
 </head>
 <body>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem illo dignissimos accusantium itaque dicta unde nesciunt iure iusto? Alias nobis quaerat asperiores dolorum unde ab provident repudiandae? Sunt, dolorum sint!
