--- a/essay1.html
+++ b/essay1.html
@@ -8,6 +8,8 @@
         body {
             color: rgb(255, 255, 0);
             font-size: 60pt;
+            color: rgb(5, 249, 5);
+            background-color: #8c8c8c;
         }
     </style>
 </head>
